fdo#47764 fix RTF import of automatic paragraph background color

Change-Id: I4b3a4bd6ce45cffc5b2c23052c49ff98579c5564